non-msrv-tests/tests/ui/union.stderr
error: traits other then `Clone` and `Copy` aren't supported by unions
 --> tests/ui/union.rs:5:1
  |
5 | #[derive_where(Debug)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MissingCopy<T>: std::marker::Copy` is not satisfied
  --> tests/ui/union.rs:10:1
   |
10 | #[derive_where(Clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `MissingCopy<T>`
   |
note: required by a bound in `__AssertCopy`
  --> tests/ui/union.rs:10:1
   |
10 | #[derive_where(Clone)]
   | ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__AssertCopy`
   = note: this error originates in the attribute macro `derive_where` (in Nightly builds, run with -Z macro-backtrace for more info)
